# SimpleGUIPlusPLus

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile
.github/workflows/: cpp.yml
cmake/: PreventInSourceBuilds.cmake  StaticAnalyzers.cmake
demo/game/: Game.hpp  World.hpp
src/: Main.cpp
src/eng/: Engine.cpp  Engine.hpp  EngineConfig.hpp  System.cpp  System.hpp
src/eng/component/: Direction.hpp  Position.hpp  PositionF.hpp  VelocityF.hpp
src/eng/event/: Event.hpp  EventHandler.cpp  EventHandler.hpp
src/eng/gfx/: Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Graphics.cpp  Graphics.hpp  GraphicsPrimitives.hpp  Renderer.cpp  Renderer.hpp  Window.cpp  Window.hpp
src/eng/gfx/texture/: Texture.cpp  Texture.hpp  TextureLoader.cpp  TextureLoader.hpp  TextureStorage.cpp  TextureStorage.hpp
src/eng/math/: Angle.cpp  Angle.hpp  Random.cpp  Random.hpp  Vector2.hpp  Vector2format.hpp
src/eng/time/: TimeStep.cpp  TimeStep.hpp
src/eng/util/: Utils.cpp  Utils.hpp
src/game/: Game.cpp
test/: CMakeLists.txt
test/eng/gfx/: TestGraphics.cpp
test/eng/math/: TestAngle.cpp  TestVector.cpp  TestVectorFormat.cpp
test/util/: OstreamRedirector.hpp
